lox-tests/tests/assignment/prefix_operator.stderr
ERROR: Invalid assignment target
 --> 2:1
  |
2 | !a = "value"; // Error at '=': Invalid assignment target.
  | ^--^
